0.12.9
 - fix: twisted error message upon SHA-256 upload verification (#73)
0.12.8:
 - fix: set row count to zero when all jobs are removed from upload queue
 - enh: increase buffer size for uploads to 4MB
0.12.7
 - setup: bump requests to 2.31.0 (CVE-2023-32681)
 - setup: bump dclab from 0.50.2 to 0.52.0
0.12.6
 - fix: properly propagate SystemExit exit codes
0.12.5
 - fix: make CACHE_DIR an optional argument to dclab-upload-task
0.12.4
 - fix: error message in preferences user tab no connection available
 - enh: allow to select upload cache directory in CLI
 - enh: allow to select upload cache directory in GUI
 - enh: make sure temporary cache directories for uploads are removed
 - enh: replace lru_cache with weak_lru_cache for instance methods
 - setup: bump dclab from 0.49.0 to 0.50.2
 - setup: bump urllib3 to 2.0
 - setup: bump requests_toolbelt to 1.0
0.12.3
 - setup: bump dclab from 0.48.4 to 0.49.0 (support tables)
0.12.2
 - setup: stop pinning dclab version
0.12.1
 - enh: GUI map "Search" button to "Enter" in "Find Data" UI
 - enh: GUI workaround for unresponsive widgets in tab widget: add labels
 - ref: GUI migrate "browse public" tab to its own widget
0.12.0
 - feat: GUI append the directory name to ZMD (M001_data.rtdc) uploads
 - feat: GUI support drag&drop of task files to upload tab (#70)
 - enh: replace ttl_cache with requests_cache (#69)
 - fix: aborting one upload/download job aborts all jobs (#71)
0.11.21
 - fix: reduce progress print statements in dcoraid-upload-task CLI
 - fix: occasionally the download path was computed incorrectly
 - enh: GUI check for visibility before updating widgets with QTimer
0.11.20
 - setup: bump dclab from 0.48.2 to 0.48.4
0.11.19
 - setup: bump dclab from 0.48.1 to 0.48.2
0.11.18
 - setup: bump dclab from 0.47.4 to 0.48.1
0.11.17
 - setup: bump dclab from 0.47.2 to 0.47.4
0.11.16
 - fix: return exit status 0 when using CLI with --version flag
0.11.15
 - setup: bump dclab from 0.47.1 to 0.47.2
0.11.14